--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&family=Overpass:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./assets/image/image_logo.svg">
     <title>Ballerini Devs</title>
 </head>
 <body>
@@ -18,20 +19,20 @@
             <nav class="redesSociais">
                 <ul class="listaRedesSociais">
                     <li class="logoRedeSocial">
-                        <img src="./image/redes_sociais/linkedin.svg" alt="">
+                        <img src="./assets/image/redes_sociais/linkedin.svg" alt="">
                     </li>
                     <li class="logoRedeSocial">
-                        <img src="./image/redes_sociais/facebook.svg" alt="">
+                        <img src="./assets/image/redes_sociais/facebook.svg" alt="">
                     </li>
                     <li class="logoRedeSocial">
-                        <img src="./image/redes_sociais/discord.svg" alt="">
+                        <img src="./assets/image/redes_sociais/discord.svg" alt="">
                     </li>
                 </ul>
             </nav>
         </h3>
 
         <div class="logo">
-            <img src="./image/image_logo.svg" alt="" class="imagemLogo">
+            <img src="./assets/image/image_logo.svg" alt="" class="imagemLogo">
             <h2 class="tituloLogo">Ballerini Devs</h2>
         </div>
     </header>
